# django-pg-returning

./: .coveragerc  AUTHORS  Makefile  setup.cfg  setup.py  tox.ini
tests/: settings.py
update_returning/: query.py
