[pytest]
django_find_project = false
addopts = --cov formulator
DJANGO_SETTINGS_MODULE = tests.settings

[wheel]
universal = 1

[flake8]
ignore = E124,E501,E127,E128
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = pg_returning
include_trailing_comma = true
known_first_party = pg_returning
known_third_party = django
multi_line_output = 5

[metadata]
license-file = LICENSE
